# birdclef-2021

./: .gitignore  .gitmodules  README.md  setup.cfg
.dvc/: config
.github/workflows/: python.yml
data/: .gitignore  train_metadata.csv.dvc  train_metadata_small.csv.dvc  train_soundscape_labels.csv.dvc
notebooks/: 01_explore.ipynb  02_dataset.ipynb
src/: constants.py  dataset.py  download.py  io.py  kaggle_download.py  models.py  preprocess.py  sample.py  spectrogram.py  train.py
tests/: test_dataset.py  test_folds.py  test_train.py
tests/resources/: train_metadata.csv
