[metadata]
name = bird_clef_2021
version = 0.0.0
description = Bird call identification
long_description = file: README.md

[options]
include_package_data = True
packages = find:
install_requires =
  kaggle
  dvc==2.9.3
  numpy==1.21.5
  pandas==1.3.5
  librosa==0.8.1
  matplotlib
  reverse_geocoder==1.5.1
  notebook==6.4.6
  ipykernel

# [options.entry_points]

[options.extras_require]
dev =
  black==20.8b1
  pytest
  flake8
  mypy
  pytest-watch
